# pd3f

./: Dockerfile  README.md  example_api.py  pyproject.toml
docs/: py314-migration.md
pd3f/: app.py
pd3f-dashboard/: Dockerfile
pd3f-ocr/: Dockerfile  ocr_folder.sh
pd3f/templates/: index.html  list.html  result.html
