[tool.poetry]
authors = ["Johannes Filter <hi@jfilter.de>"]
description = "Flask Micro Service + Web-based GUI for pd3f-core"
license = "AGPL-3.0-only"
name = "pd3f-service"
readme = "README.md"
repository = "https://github.com/pd3f/pd3f"
version = "0.5.0"

[tool.poetry.dependencies]
click = "^8.1.8"
flask = "^3.1.0"
gunicorn = "^23.0.0"
pd3f = {version = ">=0.4,<1.0", source = "objectif-private"}
python = ">=3.14,<3.15"
redis = "^5.2.1"
rq = "^2.1.0"
rq-scheduler = "^0.14.0"
sentry-sdk = {version = "^2.22.0", extras = ["flask"], optional = true}
numpy = ">=2,<3"
pandas = ">=2,<3"
shapely = "^2.1.2"
shortuuid = "^1.0.13"
torch = "^2.10.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^25.1.0", python = ">=3.9"}
pylint = "^3.3.4"
pytest = "^8.3.4"

[tool.poetry.extras]
sentry = ["sentry-sdk"]

[[tool.poetry.source]]
name = "objectif-private"
# Replace with your private package index URL before locking/installing.
url = "https://REPLACE-WITH-YOUR-PRIVATE-INDEX/simple/"
priority = "primary"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.8"]
